<resources>
    <string name="app_name">Orgânicos de Casa</string>
    <string name="txtAdicionar">Adicionar</string>
    <string name="txtBarPesquisa">Pesquisar produto favorito</string>
    <string name="txtCadastreSe">Cadastre-se.</string>
    <string name="txtCadastro">Cadastro</string>
    <string name="txtCarrinho">Carrinho</string>
    <string name="txtCarrinhoVazio">O carrinho está vazio!</string>
    <string name="txtCategoria">Categoria</string>
    <string name="txtConcluirCompra">Concluir compra</string>
    <string name="txtDescricao">Descrição:</string>
    <string name="txtEmail">Email</string>
    <string name="txtEntrar">Entrar</string>
    <string name="txtEsqueceuSenha">Esqueceu a senha?</string>
    <string name="txtFavoritos">Favoritos</string>
    <string name="txtInicio">Início</string>
    <string name="txtLimparCarrinho">Limpar carrinho</string>
    <string name="txtListaCompra">Lista de Compra</string>
    <string name="txtListas">Listas</string>
    <string name="txtNaoTemConta">Não tem conta?</string>
    <string name="txtOferta1">35% de desconto</string>
    <string name="txtOferta2">01 Nov - 31 Dez</string>
    <string name="txtPerfil">Perfil</string>
    <string name="txtPesquisa">Pesquisa</string>
    <string name="txtPrecoTotal">Preço Total</string>
    <string name="txtProdutos">Produtos</string>
    <string name="txtSaudacao">Olá, bem vindo !!!</string>
    <string name="txtSenha">Senha</string>
    <string name="txtTaxa">Taxa</string>
    <string name="txtTaxaEntrega">Taxa de entrega</string>
    <string name="txtTitulo">Título</string>
    <string name="txtTotaldeItens">Total de Itens</string>
    <string name="txtVermais"><![CDATA[Ver mais >]]></string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
</resources>