<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background"
        tools:context=".Activity.FormLogin">

        <ImageView
            android:id="@+id/image_Logo"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:src="@drawable/odclogo_baixo_transp"
            android:layout_marginTop="50dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <View
            style="@style/ContainerComponents"
            android:id="@+id/containerComponents"
            app:layout_constraintTop_toBottomOf="@id/image_Logo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <EditText
            style="@style/Edit_Text"
            android:id="@+id/edit_email"
            android:hint="@string/txtEmail"
            android:textColorHint="@color/brownwood"
            android:drawableRight="@drawable/ic_email"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            app:layout_constraintTop_toTopOf="@id/containerComponents"
            app:layout_constraintStart_toStartOf="@id/containerComponents"
            app:layout_constraintEnd_toEndOf="@id/containerComponents"/>

        <EditText
            style="@style/Edit_Text"
            android:id="@+id/edit_senha"
            android:hint="@string/txtSenha"
            android:textColorHint="@color/brownwood"
            android:drawableRight="@drawable/ic_eye"
            android:inputType="numberPassword"
            android:maxLines="1"
            app:layout_constraintStart_toStartOf="@id/containerComponents"
            app:layout_constraintEnd_toEndOf="@id/containerComponents"
            app:layout_constraintTop_toBottomOf="@+id/edit_email"/>

        <androidx.appcompat.widget.AppCompatButton
            style="@style/Button"
            android:id="@+id/bt_entrar"
            android:text="@string/txtEntrar"
            app:layout_constraintTop_toBottomOf="@id/edit_senha"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <ProgressBar
            android:id="@+id/progressbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:visibility="invisible"
            app:layout_constraintTop_toBottomOf="@id/containerComponents"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/text_telaCadastro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="50dp"
            android:text="@string/txtCadastreSe"
            android:textColor="@color/brownwood"
            android:textSize="20dp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/progressbar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>
