<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splash_background"
    tools:context=".Activity.CartActivity">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/coordinatorNavegacao"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/LinearLayoutCar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="15dp"
                android:layout_marginTop="22dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tituloCarrinho"
                        android:layout_width="288dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="bottom|center_horizontal|top"
                        android:text="@string/txtCarrinho"
                        android:textColor="@color/black"
                        android:textSize="22sp"
                        android:textStyle="bold" />

                    <ImageView
                        android:id="@+id/imageLixeira"
                        android:layout_width="wrap_content"
                        android:layout_height="35dp"
                        android:layout_weight="1"
                        android:clickable="true"
                        android:gravity="right"
                        app:srcCompat="@drawable/ic_btn_lixo" />
                </LinearLayout>

            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:layout_marginTop="15dp">

            </androidx.recyclerview.widget.RecyclerView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"></LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="16dp"
                android:background="@drawable/card_background"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="4dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/itemTotal"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/txtTotaldeItens"
                        android:textColor="@color/brownwood"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/totalTaxaTxt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="R$ 0.00"
                        android:textColor="@color/brownwood"
                        android:textSize="18sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="4dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/txtTaxaEntrega"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/txtTaxaEntrega"
                        android:textColor="@color/brownwood"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/entregaTxt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="R$ 0.00"
                        android:textColor="@color/brownwood"
                        android:textSize="18sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="4dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/txtTaxa"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/txtTaxa"
                        android:textColor="@color/brownwood"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/taxaTxt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="R$ 0.00"
                        android:textColor="@color/brownwood"
                        android:textSize="18sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <View
                    android:id="@+id/view2"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginRight="16dp"
                    android:background="@color/greenodc"
                    tools:layout_marginBottom="4dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="4dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="Total:"
                        android:textColor="@color/brownwood"
                        android:textSize="30dp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/totalTxt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="R$ 0.00"
                        android:textColor="@color/brownwood"
                        android:textSize="30sp"
                        android:textStyle="bold" />
                </LinearLayout>
            </LinearLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_margin="16dp"
                android:background="@drawable/bt_entrar">

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txtConcluirCompra"
                    android:textColor="@color/white"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>
    </ScrollView>

    <TextView
        android:id="@+id/vazioTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtCarrinhoVazio"
        android:textSize="20sp"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@id/scrollView"
        app:layout_constraintEnd_toEndOf="@+id/scrollView"
        app:layout_constraintStart_toStartOf="@+id/scrollView"
        app:layout_constraintTop_toTopOf="@+id/scrollView"
        tools:textColor="@color/black" />

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/coordinatorNavegacao"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.bottomappbar.BottomAppBar

            android:id="@+id/app_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:backgroundTint="#219f23"
            app:fabCradleRoundedCornerRadius="50dp"
            app:fabCradleVerticalOffset="6dp">

            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="0dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="0dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/homeBtn"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.2"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imageHome"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        app:srcCompat="@drawable/ic_btn_home" />

                    <TextView
                        android:id="@+id/textHome"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/txtInicio"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="12sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/searchBtn"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.2"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imageSearch"
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:layout_weight="1"
                        app:srcCompat="@drawable/ic_btn_search" />

                    <TextView
                        android:id="@+id/textSearch"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/txtPesquisa"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="12sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/cartBtn"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.2"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imageCart"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        app:srcCompat="@drawable/ic_btn_cart" />

                    <TextView
                        android:id="@+id/textCart"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/txtCarrinho"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="12sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/checklistBtn"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.2"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imageCkecklist"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        app:srcCompat="@drawable/ic_btn_checklist2" />

                    <TextView
                        android:id="@+id/textChecklist"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/txtListas"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="12sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/profileBtn"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.2"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imageProfile"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        app:srcCompat="@drawable/ic_btn_person" />

                    <TextView
                        android:id="@+id/textProfile"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/txtPerfil"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="12sp" />
                </LinearLayout>
            </LinearLayout>
        </com.google.android.material.bottomappbar.BottomAppBar>


    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</androidx.constraintlayout.widget.ConstraintLayout>